# operator-control-plane

./: .gitignore  AGENTS.md  AUTHORITY_BROKER_SPEC.md  AUTHORITY_INTEGRATION_SPEC.md  AUTHORITY_POLICY_SPEC.md  CLAUDE.md  CRYSTAL_LEDGER_INTEROP_SPEC.md  CRYSTAL_SESSION_BRIDGE_SPEC.md  DIFF_EVIDENCE_AND_STALENESS_SPEC.md  EXECUTOR_IDENTITY_SPEC.md  GOVERNED_DISPATCH_SPEC.md  LICENSE  LOCAL_LANE_CONTRACT.md  LOCAL_LANE_CONTRACT_SPEC.md  MACHINE_PROVENANCE_SPEC.md  OPERATIONS_RUNBOOK.md  OPR_GENERALIZATION_SPEC.md  README.md  SQLITE_LEDGER_P0_PLAN.md  USAGE_AUTOIMPORT_SPEC.md  USAGE_LANE_TAGGING_SPEC.md  VERIFIED_BY_GUARD_SPEC.md  authority_admin.py  authority_broker.py  authority_client.py  authority_projection.py  crystal_parse.py  dogfood_runner.py  harness_adapter.py  operator  operator-admin  operator-broker  opr  pyproject.toml  socket_permission_helper.py  study_runner.py  task_lint.py
docs/: DOGFOOD_AC9_CAMPAIGN.md  DOGFOOD_AC9_TRACK_A_RUN.md  DOGFOOD_AC9_TRACK_B_RUN.md  DOGFOOD_AC9_TRACK_C_RUN.md  DOGFOOD_RUNNER_OPERATIONS.md  FASTFOOD_CROSSED_SEAT_STUDY_PLAN.md  ISSUE7_DOGFOOD_RESUME_PLAN.md  ISSUE7_PHASE01_RUN_SHEET.md
examples/: crystal-bridge-claude-hooks.fragment.json
fastfoodagent/: build_substrate.py  fetch_substrate.py  queries.py
owners-manual/: README.md  full-owner-manual.md  index.md  manual-full.md  manual.md
tests/: test_authority_admin.py  test_authority_admin_root.py  test_authority_broker.py  test_authority_integration.py  test_authority_upgrade.py  test_dogfood_runner.py  test_dogfood_runner_root.py  test_fastfoodagent.py  test_operator.py  (+5 more)
(+90 files in other folders)
