[project]
name = "operator-control-plane"
version = "0.1.0"
requires-python = ">=3.12"

[tool.black]
line-length = 100
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
# Ignore unused import rules to prevent automatic removal
ignore = [
    "F401",  # unused import
    "F811",  # redefined while unused
]
